modules/sg_rules/main.tf
resource "aws_security_group_rule" "frontend_frontend-lb" {
  count = var.sg_name == "frontend" ? 1 : 0
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  security_group_id =  var.frontend_sg_id #data.aws_ssm_parameter.frontend_sg_id.value
  source_security_group_id = var.frontend-alb_sg_id #data.aws_ssm_parameter.frontend-alb_sg_id.value
  #module.sg[9].sg_id
}
resource "aws_security_group_rule" "backend_lb-bastion" {
  count = var.sg_name == "backend-alb" ? 1 : 0
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  security_group_id = var. backend-alb_sg_id #data.aws_ssm_parameter.backend-alb_sg_id.value
  source_security_group_id = var.bastion_sg_id  #data.aws_ssm_parameter.bastion_sg_id.value
  #module.sg[9].sg_id
}

resource "aws_security_group_rule" "bastion-ssh" {
  count = var.sg_name == "bastion" ? 1 : 0
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = var.bastion_sg_id #data.aws_ssm_parameter.bastion_sg_id.value
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "mongodb-bastion" {
  count = var.sg_name == "mongodb" ? 1 : 0
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = var.mongodb_sg_id   #data.aws_ssm_parameter.bastion_sg_id.value
  source_security_group_id = var.bastion_sg_id
  
}

resource "aws_security_group_rule" "redis-bastion" {
  count = var.sg_name == "redis" ? 1 : 0
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = var.redis_sg_id   #data.aws_ssm_parameter.bastion_sg_id.value
  source_security_group_id = var.bastion_sg_id
  
}

resource "aws_security_group_rule" "rabbitmq-bastion" {
  count = var.sg_name == "rabbitmq" ? 1 : 0
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = var.rabbitmq_sg_id   #data.aws_ssm_parameter.bastion_sg_id.value
  source_security_group_id = var.bastion_sg_id
  
}


resource "aws_security_group_rule" "mysql-bastion" {
  count = var.sg_name == "mysql" ? 1 : 0
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = var.mysql_sg_id   #data.aws_ssm_parameter.bastion_sg_id.value
  source_security_group_id = var.bastion_sg_id
  
}

resource "aws_security_group_rule" "mongodb-catalogue" {
  count = var.sg_name == "mongodb" ? 1 : 0
  type              = "ingress"
  from_port         = 27017
  to_port           = 27017
  protocol          = "tcp"
  security_group_id = var.mongodb_sg_id   #data.aws_ssm_parameter.bastion_sg_id.value
  source_security_group_id = var.catalogue_sg_id
  
}
